fix toast container css on mobile

--- a/web/src/components/Toast/Toast.css
+++ b/web/src/components/Toast/Toast.css
@@ -12,6 +12,8 @@
 
 @media only screen and (max-width: 750px) {
     .toast {
-        width: 90vw;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
