--- a/web/src/components/Toast/ToastContainer.css
+++ b/web/src/components/Toast/ToastContainer.css
@@ -8,5 +8,6 @@
 @media only screen and (max-width: 750px) {
     .toast-container {
         top: 5px;
+        width: 100%;
     }
 }
